# fintech1

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/models/: __init__.py  agent.py  llm.py  rag.py
app/routers/v1/: agent.py
app/services/: __init__.py  agent_core.py  llm_service.py  retry.py  vector_db.py
tests/: conftest.py  test_agent_core.py  test_llm_service.py  test_models.py  test_router.py  test_vector_db.py
