[tool.poetry]
name = "fintech-agent-api"
version = "1.0.0"
description = "FastAPI service exposing a streaming, tool-calling fintech agent with hybrid RAG."
authors = ["Kirill <hotkots@proton.me>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.30.0" }
openai = ">=1.68.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
tenacity = ">=9.0.0"
qdrant-client = ">=1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
ruff = ">=0.6.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally reach into private helpers and use broad `object` typing.
"tests/*" = ["SLF001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
